--- a/WebAPI_Angular/Angular7/src/index.html
+++ b/WebAPI_Angular/Angular7/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Gabriel Santos</title>
+  <title>WebAPI com Angular</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
